# UWRT_Training

./: CMakeLists.txt  README.md  package.xml
include/training/: kill_alive_turtles.hpp
launch/: launch_kill_turtles.py
src/: SAMPLE_NODE.cpp  kill_alive_turtles.cpp
